// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view_type_toggle ViewTypeToggle should render grid selection correctly 1`] = `
<EuiButtonGroup
  color="primary"
  data-test-subj="viewTypeToggleButton"
  idSelected="grid"
  onChange={[Function]}
  options={
    Array [
      Object {
        "iconType": "grid",
        "id": "grid",
        "label": "Grid view",
      },
      Object {
        "iconType": "list",
        "id": "list",
        "label": "List view",
      },
    ]
  }
/>
`;

exports[`view_type_toggle ViewTypeToggle should render list selection correctly 1`] = `
<EuiButtonGroup
  color="primary"
  data-test-subj="viewTypeToggleButton"
  idSelected="list"
  onChange={[Function]}
  options={
    Array [
      Object {
        "iconType": "grid",
        "id": "grid",
        "label": "Grid view",
      },
      Object {
        "iconType": "list",
        "id": "list",
        "label": "List view",
      },
    ]
  }
/>
`;
